<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.onix.traingithubrestapi.ShowGithubUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_user_title"
            android:layout_marginTop="@dimen/app_name_title_vertical_margin"
            android:layout_marginBottom="@dimen/app_name_title_vertical_margin"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/app_name_title"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="@dimen/user_fields_vertical_margin"
            android:layout_marginBottom="@dimen/user_fields_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:background="@color/colorPrimaryDark"
                android:id="@+id/avatar_url_image"
                android:layout_gravity="center"
                android:layout_width="@dimen/user_image_container_square"
                android:layout_height="@dimen/user_image_container_square" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/avatar_url_text"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avatar_url_text" />

                <TextView
                    android:id="@+id/avatar_url_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avatar_url_text_default" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/user_fields_vertical_margin"
            android:layout_marginBottom="@dimen/user_fields_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_text"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_text" />

            <TextView
                android:id="@+id/id_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_text_default" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/user_fields_vertical_margin"
            android:layout_marginBottom="@dimen/user_fields_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_text"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text" />

            <TextView
                android:id="@+id/name_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text_default" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/user_fields_vertical_margin"
            android:layout_marginBottom="@dimen/user_fields_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/public_repos_text"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_repos_text" />

            <TextView
                android:id="@+id/public_repos_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_repos_text_default" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
